# payment_page

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  manage.py  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
items/: admin.py  models.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_price_remove_item_price_delete_order_price_item.py  0003_stripeprice_item_price_delete_price_stripeprice_item.py  0004_iteminorder_tax_item_currency_alter_item_price_and_more.py  0005_remove_discount_order_remove_iteminorder_item_and_more.py  0006_alter_item_description.py
order/: admin.py  models.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_alter_iteminorder_amount.py  0003_alter_iteminorder_options_tax_order_and_more.py
payment_page/: asgi.py  settings.py  urls.py  wsgi.py
paymet_page/: manage.py
paymet_page/items/: admin.py  models.py  urls.py
paymet_page/paymet_page/: asgi.py  settings.py  wsgi.py
static/: checkout.js
templates/: item.html  main.html  order.html
